deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: datacontrol
  namespace: datacontrol
  labels:
    name: datacontrol
