deploy/frontend-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: datacontrol-frontend
  namespace: datacontrol
  labels:
    app: datacontrol
spec:
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
      name: nginx
  selector:
    app: datacontrol-app
    tier: frontend
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: datacontrol-frontend
  namespace: datacontrol
spec:
  selector:
    matchLabels:
      app: datacontrol-app
      tier: frontend
  replicas: 1
  template:
    metadata:
      namespace: datacontrol
      labels:
        app: datacontrol-app
        tier: frontend
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: nginx
          image: docker.io/library/data-control-app-nginx:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 80
              name: port80
            - containerPort: 5002
              name: port5002
            - containerPort: 5003
              name: port5003
        - name: frontend
          image: docker.io/library/data-control-app-frontend:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
              name: frontend
