deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: datacontrol-ingress
  namespace: datacontrol
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  rules:
    - host: datacontrol.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: datacontrol-frontend
                port:
                  number: 80
          - path: /api/user
            pathType: Prefix
            backend:
              service:
                name: datacontrol-backend
                port:
                  number: 5002
          - path: /login
            pathType: Prefix
            backend:
              service:
                name: datacontrol-backend
                port:
                  number: 5002
          - path: /logout
            pathType: Prefix
            backend:
              service:
                name: datacontrol-backend
                port:
                  number: 5002
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: datacontrol-backend
                port:
                  number: 5002
          - path: /api/swagger-ui
            pathType: Prefix
            backend:
              service:
                name: datacontrol-backend
                port:
                  number: 5002
          - path: /oauth2/
            pathType: Prefix
            backend:
              service:
                name: datacontrol-backend
                port:
                  number: 5002
